# SensorAnalysisToolkit

./: CMakeLists.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zukanphybrisacuk_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zukanphybrisacuk_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zukanphybrisacuk_0/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
examples/BasicImageProcessing/: BasicImageProcessing.cxx  CMakeLists.txt
examples/BeamStats/: BeamStats.cxx  CMakeLists.txt
examples/DoseMap/: CMakeLists.txt  DoseMap.cxx
examples/EdgeDetector/: CMakeLists.txt  EdgeDetector.cxx
examples/ErrorFunctionFit/: CMakeLists.txt  ErrorFunctionFit.cxx
examples/GammaMap/: CMakeLists.txt  GammaMap.cxx
examples/ITKAdapterExample/: CMakeLists.txt  ITKAdapterExample.cxx
examples/KernelParameterCalculator/: CMakeLists.txt  KernelParameterCalculator.cxx
examples/PeakValue/: CMakeLists.txt  PeakValue.cxx
examples/ROOTAnalysis/: CMakeLists.txt  ROOTAnalysis.cxx
examples/SensorSimulation/: CMakeLists.txt  SensorSimulation.cxx  output.txt
examples/SliceComparison/: CMakeLists.txt  SliceComparison.cxx
examples/SquareFieldFitting/: CMakeLists.txt  SquareFieldFitting.cxx
examples/XYSlice/: CMakeLists.txt  XYSlice.cxx
examples/test/: CMakeLists.txt  test.cxx
modules/: CMakeLists.txt
modules/Base/DarkFrameDetection/: CMakeLists.txt
modules/Base/DarkFrameDetection/include/: stkDarkFrameDetection.h  stkDarkFrameDetection.hxx
modules/Base/ITKAdapter/: CMakeLists.txt
modules/Base/ITKAdapter/include/: stkITKAdapter.h  stkITKAdapter.hxx
modules/Base/Image/include/: stkImage.h  stkImage.hxx
modules/IO/RawIO/: CMakeLists.txt
modules/IO/RawIOImageStack/: CMakeLists.txt
modules/IO/RawIOImageStack/include/: stkRawImageStackIO.hxx
modules/ImageCalculations/ITKTools/: CMakeLists.txt
modules/ImageCalculations/ITKTools/include/: stkITKTools.h  stkITKTools.hxx
modules/ImageCalculations/ImageFlatFieldCorrection/include/: stkImageFlatFieldCorrection.h  stkImageFlatFieldCorrection.hxx
modules/ImageCalculations/ImageMask/include/: stkImageMask.hxx
modules/ImageCalculations/ImageSum/include/: stkImageSum.h  stkImageSum.hxx
modules/Plotting/HistogramAnalysis/: CMakeLists.txt
modules/Plotting/HistogramAnalysis/include/: stkHistogramAnalysis.h  stkHistogramAnalysis.hxx
modules/Plotting/Histograms/: CMakeLists.txt
modules/Plotting/Histograms/include/: stkImageHistogram.h  stkImageHistogram.hxx
